Graphviz/lib/common/y.output
Terminals which are not used

   T_error


Grammar

    0 $accept: html $end

    1 @1: /* empty */

    2 html: T_html fonttext @1 T_end_html

    3 @2: /* empty */

    4 html: T_html fonttable @2 T_end_html
    5     | error

    6 fonttext: text
    7         | T_font text T_end_font

    8 text: lines
    9     | lines string
   10     | string
   11     | /* empty */

   12 lines: string br
   13      | lines string br

   14 br: T_br T_end_br
   15   | T_BR

   16 string: T_string
   17       | string T_string

   18 @3: /* empty */

   19 table: opt_space T_table @3 rows T_end_table opt_space

   20 fonttable: table
   21          | T_font table T_end_font

   22 opt_space: string
   23          | /* empty */

   24 rows: row
   25     | rows row

   26 @4: /* empty */

   27 row: T_row @4 cells T_end_row

   28 cells: cell
   29      | cells cell

   30 @5: /* empty */

   31 cell: T_cell fonttable @5 T_end_cell

   32 @6: /* empty */

   33 cell: T_cell fonttext @6 T_end_cell

   34 @7: /* empty */

   35 cell: T_cell image @7 T_end_cell

   36 image: T_img T_end_img
   37      | T_IMG


Terminals, with rules where they appear

$end (0) 0
error (256) 5
T_end_br (258) 14
T_end_img (259) 36
T_row (260) 27
T_end_row (261) 27
T_html (262) 2 4
T_end_html (263) 2 4
T_end_table (264) 19
T_end_cell (265) 31 33 35
T_end_font (266) 7 21
T_string (267) 16 17
T_error (268)
T_BR (269) 15
T_br (270) 14
T_IMG (271) 37
T_img (272) 36
T_table (273) 19
T_cell (274) 31 33 35
T_font (275) 7 21


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
html (22)
    on left: 2 4 5, on right: 0
@1 (23)
    on left: 1, on right: 2
@2 (24)
    on left: 3, on right: 4
fonttext (25)
    on left: 6 7, on right: 2 33
text (26)
    on left: 8 9 10 11, on right: 6 7
lines (27)
    on left: 12 13, on right: 8 9 13
br (28)
    on left: 14 15, on right: 12 13
string (29)
    on left: 16 17, on right: 9 10 12 13 17 22
table (30)
    on left: 19, on right: 20 21
@3 (31)
    on left: 18, on right: 19
fonttable (32)
    on left: 20 21, on right: 4 31
opt_space (33)
    on left: 22 23, on right: 19
rows (34)
    on left: 24 25, on right: 19 25
row (35)
    on left: 27, on right: 24 25
@4 (36)
    on left: 26, on right: 27
cells (37)
    on left: 28 29, on right: 27 29
cell (38)
    on left: 31 33 35, on right: 28 29
@5 (39)
    on left: 30, on right: 31
@6 (40)
    on left: 32, on right: 33
@7 (41)
    on left: 34, on right: 35
image (42)
    on left: 36 37, on right: 35


state 0

    0 $accept: . html $end

    error   shift, and go to state 1
    T_html  shift, and go to state 2

    html  go to state 3


state 1

    5 html: error .

    $default  reduce using rule 5 (html)


state 2

    2 html: T_html . fonttext @1 T_end_html
    4     | T_html . fonttable @2 T_end_html

    T_string  shift, and go to state 4
    T_font    shift, and go to state 5

    T_table   reduce using rule 23 (opt_space)
    $default  reduce using rule 11 (text)

    fonttext   go to state 6
    text       go to state 7
    lines      go to state 8
    string     go to state 9
    table      go to state 10
    fonttable  go to state 11
    opt_space  go to state 12


state 3

    0 $accept: html . $end

    $end  shift, and go to state 13


state 4

   16 string: T_string .

    $default  reduce using rule 16 (string)


state 5

    7 fonttext: T_font . text T_end_font
   21 fonttable: T_font . table T_end_font

    T_string  shift, and go to state 4

    T_table   reduce using rule 23 (opt_space)
    $default  reduce using rule 11 (text)

    text       go to state 14
    lines      go to state 8
    string     go to state 9
    table      go to state 15
    opt_space  go to state 12


state 6

    2 html: T_html fonttext . @1 T_end_html

    $default  reduce using rule 1 (@1)

    @1  go to state 16


state 7

    6 fonttext: text .

    $default  reduce using rule 6 (fonttext)


state 8

    8 text: lines .
    9     | lines . string
   13 lines: lines . string br

    T_string  shift, and go to state 4

    $default  reduce using rule 8 (text)

    string  go to state 17


state 9

   10 text: string .
   12 lines: string . br
   17 string: string . T_string
   22 opt_space: string .

    T_string  shift, and go to state 18
    T_BR      shift, and go to state 19
    T_br      shift, and go to state 20

    T_table   reduce using rule 22 (opt_space)
    $default  reduce using rule 10 (text)

    br  go to state 21


state 10

   20 fonttable: table .

    $default  reduce using rule 20 (fonttable)


state 11

    4 html: T_html fonttable . @2 T_end_html

    $default  reduce using rule 3 (@2)

    @2  go to state 22


state 12

   19 table: opt_space . T_table @3 rows T_end_table opt_space

    T_table  shift, and go to state 23


state 13

    0 $accept: html $end .

    $default  accept


state 14

    7 fonttext: T_font text . T_end_font

    T_end_font  shift, and go to state 24


state 15

   21 fonttable: T_font table . T_end_font

    T_end_font  shift, and go to state 25


state 16

    2 html: T_html fonttext @1 . T_end_html

    T_end_html  shift, and go to state 26


state 17

    9 text: lines string .
   13 lines: lines string . br
   17 string: string . T_string

    T_string  shift, and go to state 18
    T_BR      shift, and go to state 19
    T_br      shift, and go to state 20

    $default  reduce using rule 9 (text)

    br  go to state 27


state 18

   17 string: string T_string .

    $default  reduce using rule 17 (string)


state 19

   15 br: T_BR .

    $default  reduce using rule 15 (br)


state 20

   14 br: T_br . T_end_br

    T_end_br  shift, and go to state 28


state 21

   12 lines: string br .

    $default  reduce using rule 12 (lines)


state 22

    4 html: T_html fonttable @2 . T_end_html

    T_end_html  shift, and go to state 29


state 23

   19 table: opt_space T_table . @3 rows T_end_table opt_space

    $default  reduce using rule 18 (@3)

    @3  go to state 30


state 24

    7 fonttext: T_font text T_end_font .

    $default  reduce using rule 7 (fonttext)


state 25

   21 fonttable: T_font table T_end_font .

    $default  reduce using rule 21 (fonttable)


state 26

    2 html: T_html fonttext @1 T_end_html .

    $default  reduce using rule 2 (html)


state 27

   13 lines: lines string br .

    $default  reduce using rule 13 (lines)


state 28

   14 br: T_br T_end_br .

    $default  reduce using rule 14 (br)


state 29

    4 html: T_html fonttable @2 T_end_html .

    $default  reduce using rule 4 (html)


state 30

   19 table: opt_space T_table @3 . rows T_end_table opt_space

    T_row  shift, and go to state 31

    rows  go to state 32
    row   go to state 33


state 31

   27 row: T_row . @4 cells T_end_row

    $default  reduce using rule 26 (@4)

    @4  go to state 34


state 32

   19 table: opt_space T_table @3 rows . T_end_table opt_space
   25 rows: rows . row

    T_row        shift, and go to state 31
    T_end_table  shift, and go to state 35

    row  go to state 36


state 33

   24 rows: row .

    $default  reduce using rule 24 (rows)


state 34

   27 row: T_row @4 . cells T_end_row

    T_cell  shift, and go to state 37

    cells  go to state 38
    cell   go to state 39


state 35

   19 table: opt_space T_table @3 rows T_end_table . opt_space

    T_string  shift, and go to state 4

    $default  reduce using rule 23 (opt_space)

    string     go to state 40
    opt_space  go to state 41


state 36

   25 rows: rows row .

    $default  reduce using rule 25 (rows)


state 37

   31 cell: T_cell . fonttable @5 T_end_cell
   33     | T_cell . fonttext @6 T_end_cell
   35     | T_cell . image @7 T_end_cell

    T_string  shift, and go to state 4
    T_IMG     shift, and go to state 42
    T_img     shift, and go to state 43
    T_font    shift, and go to state 5

    T_table   reduce using rule 23 (opt_space)
    $default  reduce using rule 11 (text)

    fonttext   go to state 44
    text       go to state 7
    lines      go to state 8
    string     go to state 9
    table      go to state 10
    fonttable  go to state 45
    opt_space  go to state 12
    image      go to state 46


state 38

   27 row: T_row @4 cells . T_end_row
   29 cells: cells . cell

    T_end_row  shift, and go to state 47
    T_cell     shift, and go to state 37

    cell  go to state 48


state 39

   28 cells: cell .

    $default  reduce using rule 28 (cells)


state 40

   17 string: string . T_string
   22 opt_space: string .

    T_string  shift, and go to state 18

    $default  reduce using rule 22 (opt_space)


state 41

   19 table: opt_space T_table @3 rows T_end_table opt_space .

    $default  reduce using rule 19 (table)


state 42

   37 image: T_IMG .

    $default  reduce using rule 37 (image)


state 43

   36 image: T_img . T_end_img

    T_end_img  shift, and go to state 49


state 44

   33 cell: T_cell fonttext . @6 T_end_cell

    $default  reduce using rule 32 (@6)

    @6  go to state 50


state 45

   31 cell: T_cell fonttable . @5 T_end_cell

    $default  reduce using rule 30 (@5)

    @5  go to state 51


state 46

   35 cell: T_cell image . @7 T_end_cell

    $default  reduce using rule 34 (@7)

    @7  go to state 52


state 47

   27 row: T_row @4 cells T_end_row .

    $default  reduce using rule 27 (row)


state 48

   29 cells: cells cell .

    $default  reduce using rule 29 (cells)


state 49

   36 image: T_img T_end_img .

    $default  reduce using rule 36 (image)


state 50

   33 cell: T_cell fonttext @6 . T_end_cell

    T_end_cell  shift, and go to state 53


state 51

   31 cell: T_cell fonttable @5 . T_end_cell

    T_end_cell  shift, and go to state 54


state 52

   35 cell: T_cell image @7 . T_end_cell

    T_end_cell  shift, and go to state 55


state 53

   33 cell: T_cell fonttext @6 T_end_cell .

    $default  reduce using rule 33 (cell)


state 54

   31 cell: T_cell fonttable @5 T_end_cell .

    $default  reduce using rule 31 (cell)


state 55

   35 cell: T_cell image @7 T_end_cell .

    $default  reduce using rule 35 (cell)
